moved code from logAnalyser module into core

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,8 +64,6 @@
         <url>http://www.europeana.eu</url>
     </organization>
     <build>
-        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
-        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
         <extensions>
@@ -323,6 +321,10 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
         </dependency>
     </dependencies>
 </project>
