updated to solr version 1.4.1
Don't forget to add -Dmeta-repo.properties=services/src/main/resources/meta-repo.properties to your BackEnd starter.

Also update your local europeana.properties file with the new services instead of API urls

--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -63,12 +63,12 @@ feedback.from  = noreply@europeana.eu
 #
 # other
 #
-cacheUrl = http://localhost:8983/api/image/?
+cacheUrl = http://localhost:8983/services/image/?
 
 #
 # Resolver Servlet
 #
-resolverUrlPrefix  = http://localhost:8983/api/resolve
+resolverUrlPrefix  = http://localhost:8983/services/resolve
 displayPageUrl     = http://localhost:8983/portal/full-doc.html
 
 #
