--- a/core/src/test/resources/europeana-test.properties
+++ b/core/src/test/resources/europeana-test.properties
@@ -68,7 +68,7 @@ template.path = WEB-INF/templates/
 # other
 #
 #cacheUrl = http://dashboard.europeana.sara.nl/cache/image/?
-cacheUrl = http://localhost:8983/api/image/?
+cacheUrl = http://localhost:8983/services/image/?
 
 
 #
