--- a/launch.properties.template
+++ b/launch.properties.template
@@ -112,3 +112,17 @@ portal.name = portal
 # link will be created in the actions sidebar of the full-doc view.
 #
 #image.annotation.tool.base.url=../image-annotation-frontend/annotate.jsp
+
+
+#
+# Configure the Metadata Repository
+#
+repositoryName = Delving MetaRepo
+adminEmail = somebody@delving.eu
+earliestDateStamp = 1990-02-01T12:00:00Z
+repositoryIdentifier = meta-repo.delving.eu
+sampleIdentifier = 00101_Ag_NO_sffDF:4c277cd8f208d29792096c1e
+responseListSize = 100
+harvestStepCleanupDelay = 15000
+
+Î
