--- a/sip-core/pom.xml
+++ b/sip-core/pom.xml
@@ -65,7 +65,7 @@
     <dependencies>
         <dependency>
             <groupId>eu.europeana</groupId>
-            <artifactId>definitions</artifactId>
+            <artifactId>core</artifactId>
             <version>0.1.0</version>
         </dependency>
         <dependency>
