--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,11 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+               <groupId>org.springframework</groupId>
+               <artifactId>org.springframework.oxm</artifactId>
+               <version>${spring.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.security</groupId>
