TestContentLoading does MetaRepo import and then harvindex ObjectCache and related service removed Using Mongo subcollections for Records

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -161,6 +161,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jsp-2.1</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <scope>test</scope>
