StaticPageController now handles images *.jpg.img *.png.img and *.gif.img

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -106,6 +106,10 @@
 			<artifactId>core</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
