changed pom so that scala and java classes build correctly with maven

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -67,11 +67,28 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+
                 <executions>
                     <execution>
+                        <id>compile</id>
                         <goals>
                             <goal>compile</goal>
+                        </goals>
+                        <phase>compile</phase>
+                    </execution>
+
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
                             <goal>testCompile</goal>
+                        </goals>
+                        <phase>test-compile</phase>
+                    </execution>
+
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -141,8 +158,8 @@
             <artifactId>spring-security-config</artifactId>
         </dependency>
         <dependency>
-           <groupId>org.springframework</groupId>
-           <artifactId>org.springframework.oxm</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.oxm</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
