--- a/launch.properties.template
+++ b/launch.properties.template
@@ -87,6 +87,9 @@ feedback.from  = noreply@europeana.eu
 # helpers
 #
 debug = false
+#options: DEBUG, HTML_DEBUG, RETHROW, IGNORE see also: http://freemarker.sourceforge.net/docs/pgui_config_errorhandling.html
+# ignore in production
+debug.freemarker = debug
 
 #
 # Where to get messages from and how frequently the cache is flushed
