--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -40,7 +40,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo.webstart</groupId>
                 <artifactId>webstart-maven-plugin</artifactId>
-                <version>1.0-beta-1-SNAPSHOT</version>
+                <version>1.0-beta-1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
