Updated pom dependencies to use scala-compiler in provided scope.
GeoHash: http://maps.google.com/maps?q=MyCodingMap@52.066626,4.302139

--- a/pom.xml
+++ b/pom.xml
@@ -449,7 +449,7 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-compiler</artifactId>
                 <version>${scala.version}</version>
-                <scope>compile</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
