--- a/portal/src/main/webapp/theme/basic/snippets/3-column-grid.template
+++ b/portal/src/main/webapp/theme/basic/snippets/3-column-grid.template
@@ -1,10 +1,10 @@
-<div class="grid_4">
+<div class="grid_4 alpha">
      1.
 </div>
 <div class="grid_4">
      2.
 </div>
-<div class="grid_4">
+<div class="grid_4 omega">
      3.
 </div> 
 <div class="clear></div>
