--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -27,7 +27,7 @@
     <packaging>war</packaging>
     <name>Portal Web Application</name>
     <version>0.1.6</version>
-    <description></description>
+    <description>Human Interface</description>
     <inceptionYear>2009</inceptionYear>
 
     <parent>
@@ -114,10 +114,6 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
