--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.jnlp</groupId>
+            <artifactId>jnlp-api</artifactId>
+            <version>1.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
             <scope>test</scope>
