added europeana repository back to main pom. Later to be replaced with Delving artifactory

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,23 @@
     </developers>
 
     <repositories>
+        <!-- to be removed when delving artifactory is up and running. -->
+        <repository>
+            <id>releases</id>
+            <url>http://europeanalabs.eu/artifactory/repo</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>snapshots</id>
+            <url>http://europeanalabs.eu/artifactory/repo</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+
+        <!-- default repositories   -->
         <repository>
             <id>repo1</id>
             <url>http://repo1.maven.org/maven2</url>
