--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.4</version>
             </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.0.0.GA</version>
+            </dependency>
 
             <!-- containers -->
             <dependency>
