--- a/sip-core/pom.xml
+++ b/sip-core/pom.xml
@@ -85,6 +85,10 @@
             <version>0.1.7</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
         </dependency>
