brief-doc.html in the url replaced with /search

--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -148,6 +148,14 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.xml</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>*.json</url-pattern>
+    </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/search</url-pattern>
+    </servlet-mapping>
 
     <session-config>
         <session-timeout>30</session-timeout>
