--- a/pom.xml
+++ b/pom.xml
@@ -446,6 +446,13 @@
                 <artifactId>dom4j</artifactId>
                 <version>1.6.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+                <version>1.3.04</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <properties>
