--- a/services/pom.xml
+++ b/services/pom.xml
@@ -218,5 +218,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_2.8.1</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 </project>
