--- a/pom.xml
+++ b/pom.xml
@@ -453,6 +453,12 @@
                 <version>1.3.04</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.collections</groupId>
+                <artifactId>google-collections</artifactId>
+                <version>1.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <properties>
