--- a/services/pom.xml
+++ b/services/pom.xml
@@ -12,7 +12,7 @@
         <artifactId>europeana</artifactId>
         <version>1</version>
     </parent>
-    
+
     <developers>
         <developer>
             <name>Sjoerd Siebinga</name>
@@ -41,7 +41,7 @@
         <name>Delving</name>
         <url>http://www.delving.eu</url>
     </organization>
-    
+
     <pluginRepositories>
         <pluginRepository>
             <id>Codehaus Snapshots</id>
@@ -222,6 +222,10 @@
             <groupId>net.liftweb</groupId>
             <artifactId>lift-json_2.8.1</artifactId>
             <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
         </dependency>
     </dependencies>
 </project>
