--- a/pom.xml
+++ b/pom.xml
@@ -53,91 +53,22 @@
     </developers>
 
     <repositories>
-        <!-- to be removed when delving artifactory is up and running. -->
         <repository>
-            <id>releases</id>
-            <url>http://europeanalabs.eu/artifactory/repo</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>snapshots</id>
-            <url>http://europeanalabs.eu/artifactory/repo</url>
+            <id>delving-nexus</id>
+            <name>delving</name>
+            <url>http://delving.eu:8081/nexus/content/groups/public</url>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
-        </repository>
-
-        <!-- default repositories   -->
-        <repository>
-            <id>repo1</id>
-            <url>http://repo1.maven.org/maven2</url>
-        </repository>
-        <repository>
-            <id>aduna</id>
-            <name>Sesame</name>
-            <url>http://repo.aduna-software.org/maven2/releases</url>
-        </repository>
-        <repository>
-            <id>jboss</id>
-            <name>JBoss Repository (initially with include pattern org/jboss/**,org/richfaces/**)</name>
-            <url>http://repository.jboss.com/maven2</url>
-        </repository>
-        <repository>
-            <id>ibiblio</id>
-            <url>http://mirrors.ibiblio.org/pub/mirrors/maven2/</url>
-        </repository>
-        <repository>
-            <id>codehaus</id>
-            <url>http://repository.codehaus.org</url>
-        </repository>
-        <repository>
-            <id>jetty</id>
-            <url>http://oss.sonatype.org/content/groups/jetty/</url>
-        </repository>
-        <repository>
-            <id>java.net.m1</id>
-            <name>java.net Maven1 Format</name>
-            <url>http://download.java.net/maven/1</url>
-        </repository>
-        <repository>
-            <id>spring-releases</id>
-            <name>EBR Spring Release Repository</name>
-            <url>http://repository.springsource.com/maven/bundles/release</url>
-        </repository>
-        <repository>
-            <id>gwt</id>
-            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo</url>
-        </repository>
-        <repository>
-            <id>java.net.m2</id>
-            <name>java.net Maven2 Format</name>
-            <url>http://download.java.net/maven/2</url>
-        </repository>
-        <repository>
-            <id>atlassian</id>
-            <url>http://repository.atlassian.com/</url>
-        </repository>
-        <repository>
-            <id>codehaus-snapshots</id>
-            <url>http://snapshots.repository.codehaus.org/</url>
-        </repository>
-        <repository>
-            <id>spring-external</id>
-            <name>EBR External Release Repository</name>
-            <url>http://repository.springsource.com/maven/bundles/external</url>
-        </repository>
-        <repository>
-            <id>scala-tools.releases</id>
-            <name>Scala-Tools Dependencies Repository for Releases</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </repository>
-        <repository>
-            <id>scala-tools.snapshots</id>
-            <name>Scala-Tools Dependencies Repository for Snapshots</name>
-            <url>http://scala-tools.org/repo-snapshots</url>
-            <snapshots/>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <!--had to add these to the default repositories in Nexus: -->
+            <!--  spring-releases: http://repository.springsource.com/maven/bundles/release/-->
+            <!--  scala-tools.releases: http://scala-tools.org/repo-releases/-->
+            <!--  scala-tools.snapshots: http://scala-tools.org/repo-snapshots/-->
+            <!--had to add manually to 3rd-party hosted in Nexus:-->
+            <!--  javax.jnlp:jnlp-api:1.5.0-->
         </repository>
     </repositories>
 
