--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-            <!--1.2.15 has links to JMX classes which cause problems-->
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -154,9 +153,16 @@
                 <version>2.0</version>
             </dependency>
             <dependency>
+                <!--two different http clients-->
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>4.0.1</version>
+            </dependency>
+            <dependency>
+                <!--two different http clients-->
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
@@ -304,7 +310,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.5.2</version>
+                <version>1.6.1</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
