--- a/sip-core/pom.xml
+++ b/sip-core/pom.xml
@@ -85,6 +85,10 @@
             <version>0.1.7</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
