--- a/metameta/pom.xml
+++ b/metameta/pom.xml
@@ -26,7 +26,7 @@
     <artifactId>metameta</artifactId>
     <packaging>jar</packaging>
     <name>Meta-Meta</name>
-    <version>0.1.8</version>
+    <version>0.1.8-SNAPSHOT</version>
     <description>Core Metadata Classes</description>
     <inceptionYear>2010</inceptionYear>
 
