--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -26,7 +26,7 @@
     <artifactId>portal</artifactId>
     <packaging>war</packaging>
     <name>Portal Web Application</name>
-    <version>0.1.7</version>
+    <version>0.1.8</version>
     <description>Human Interface</description>
     <inceptionYear>2009</inceptionYear>
 
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>eu.europeana</groupId>
 			<artifactId>core</artifactId>
-			<version>0.1.7</version>
+			<version>0.1.8-SNAPSHOT</version>
 		</dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
