--- a/sip-core/pom.xml
+++ b/sip-core/pom.xml
@@ -26,7 +26,7 @@
     <artifactId>sip-core</artifactId>
     <packaging>jar</packaging>
     <name>SIP-Core</name>
-    <version>0.1.8</version>
+    <version>0.1.8-SNAPSHOT</version>
     <description>Core SIP Classes</description>
     <inceptionYear>2010</inceptionYear>
 
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>eu.delving</groupId>
             <artifactId>metameta</artifactId>
-            <version>0.1.8</version>
+            <version>0.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
