--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>sip-creator</artifactId>
     <packaging>jar</packaging>
     <name>SIP-Creator</name>
-    <version>0.1.7</version>
+    <version>0.1.8</version>
     <inceptionYear>2008</inceptionYear>
 
     <parent>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>eu.delving</groupId>
             <artifactId>sip-core</artifactId>
-            <version>0.1.8</version>
+            <version>0.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.jnlp</groupId>
