--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>eu.europeana</groupId>
-    <artifactId>europeana</artifactId>
+    <groupId>eu.delving</groupId>
+    <artifactId>parent</artifactId>
     <version>1</version>
     <packaging>pom</packaging>
 
@@ -54,22 +54,24 @@
 
     <repositories>
         <repository>
-            <id>delving-nexus</id>
+            <id>releases</id>
             <name>delving</name>
             <url>http://development.delving.org:8081/nexus/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
+        </repository>
+        <repository>
+            <id>releases</id>
+            <name>delving</name>
+            <url>http://development.delving.org:8081/nexus/content/repositories/snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-            <!--had to add these to the default repositories in Nexus: -->
-            <!--  spring-releases: http://repository.springsource.com/maven/bundles/release/-->
-            <!--  scala-tools.releases: http://scala-tools.org/repo-releases/-->
-            <!--  scala-tools.snapshots: http://scala-tools.org/repo-snapshots/-->
-            <!--had to add manually to 3rd-party hosted in Nexus:-->
-            <!--  javax.jnlp:jnlp-api:1.5.0-->
         </repository>
+        <!--had to add these to the default repositories in Nexus: -->
+        <!--  spring-releases: http://repository.springsource.com/maven/bundles/release/-->
+        <!--  scala-tools.releases: http://scala-tools.org/repo-releases/-->
+        <!--  scala-tools.snapshots: http://scala-tools.org/repo-snapshots/-->
+        <!--had to add manually to 3rd-party hosted in Nexus:-->
+        <!--  javax.jnlp:jnlp-api:1.5.0-->
     </repositories>
 
     <distributionManagement>
