--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -31,8 +31,8 @@
     <inceptionYear>2009</inceptionYear>
 
     <parent>
-        <groupId>eu.europeana</groupId>
-        <artifactId>europeana</artifactId>
+        <groupId>eu.delving</groupId>
+        <artifactId>parent</artifactId>
         <version>1</version>
     </parent>
 
@@ -106,7 +106,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>eu.europeana</groupId>
+			<groupId>eu.delving</groupId>
 			<artifactId>core</artifactId>
 			<version>0.1.8-SNAPSHOT</version>
 		</dependency>
