--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -9,8 +9,8 @@
     <inceptionYear>2008</inceptionYear>
 
     <parent>
-        <groupId>eu.europeana</groupId>
-        <artifactId>europeana</artifactId>
+        <groupId>eu.delving</groupId>
+        <artifactId>parent</artifactId>
         <version>1</version>
     </parent>
 
