--- a/services/src/test/resources/mock-launch.properties
+++ b/services/src/test/resources/mock-launch.properties
@@ -1,3 +1,24 @@
+#
+# Copyright 2010 DELVING BV
+#
+# Licensed under the EUPL, Version 1.1 or as soon they
+# will be approved by the European Commission - subsequent
+# versions of the EUPL (the "Licence");
+# you may not use this work except in compliance with the
+# Licence.
+# You may obtain a copy of the Licence at:
+#
+# http://ec.europa.eu/idabc/eupl
+#
+# Unless required by applicable law or agreed to in
+# writing, software distributed under the Licence is
+# distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+# express or implied.
+# See the Licence for the specific language governing
+# permissions and limitations under the Licence.
+#
+
 solr.selectUrl = http://localhost:8983/solr
 solr.updateUrl = http://localhost:8983/solr
 solr.timeout = 60000
@@ -5,6 +26,7 @@ solr.retries = 1
 services.url = http://localhost:8983/services
 services.harvindexing.prefix = ese
 services.password = something
+services.api.useAccessKey = false
 services.pmh.repositoryName = Delving MetaRepo
 services.pmh.adminEmail = somebody@delving.eu
 services.pmh.earliestDateStamp = 1990-02-01T12:00:00Z
