Added MongoFactory so we can both use ReplicaSets or single instances via the launch.properties file. Also upgraded to mongo java driver 2.4. Added new launch files for testing cluster setup on the mac

--- a/tools/scripts/mongodb/org.mongo.mongod-arbiter2.plist
+++ b/tools/scripts/mongodb/org.mongo.mongod-arbiter2.plist
@@ -3,18 +3,18 @@
 <plist version="1.0">
     <dict>
         <key>Label</key>
-        <string>org.mongo.mongod</string>
+        <string>org.mongo.mongod-arbiter2</string>
         <key>RunAtLoad</key>
         <true/>
         <key>ProgramArguments</key>
         <array>
             <string>/opt/local/bin/mongod</string>
             <string>--dbpath</string>
-            <string>/opt/local/var/db/mongodb</string>
+            <string>/opt/local/var/db/mongodb_arb2</string>
             <string>--logpath</string>
-            <string>/opt/local/var/log/mongodb.log</string>
+            <string>/opt/local/var/log/mongodb_arb2.log</string>
             <string>--port</string>
-            <string>27017</string>
+            <string>27020</string>
             <string>--replSet</string>
             <string>delving</string>
         </array>
