--- a/services/src/test/resources/mock-launch.properties
+++ b/services/src/test/resources/mock-launch.properties
@@ -35,6 +35,13 @@ services.pmh.sampleIdentifier = 00101_Ag_NO_sffDF:4c277cd8f208d29792096c1e
 services.pmh.responseListSize = 100
 services.pmh.harvestStepCleanupDelay = 15000
 services.mongo.dbName = mock_services
+mongo.test.context = true
+mongo.server1.host = localhost
+mongo.server1.port = 27017
+mongo.server2.host = localhost
+mongo.server2.port = 27018
+mongo.server3.host = localhost
+mongo.server3.port = 27019
 trigger.startDelay     = 9990
 trigger.repeatInterval = 3000
 admin.to       = somebody@delving.eu
