--- a/tools/scripts/mongodb/org.mongo.mongod2.plist
+++ b/tools/scripts/mongodb/org.mongo.mongod2.plist
@@ -3,18 +3,18 @@
 <plist version="1.0">
     <dict>
         <key>Label</key>
-        <string>org.mongo.mongod</string>
+        <string>org.mongo.mongod2</string>
         <key>RunAtLoad</key>
         <true/>
         <key>ProgramArguments</key>
         <array>
             <string>/opt/local/bin/mongod</string>
             <string>--dbpath</string>
-            <string>/opt/local/var/db/mongodb</string>
+            <string>/opt/local/var/db/mongodb_slave1</string>
             <string>--logpath</string>
-            <string>/opt/local/var/log/mongodb.log</string>
+            <string>/opt/local/var/log/mongodb_slave1.log</string>
             <string>--port</string>
-            <string>27017</string>
+            <string>27018</string>
             <string>--replSet</string>
             <string>delving</string>
         </array>
